samples/_failures_safe/1761351656_548f21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aeb228a3.c: In function ‘main’:
./samples/SAFE/__tmp_aeb228a3.c:158:17: error: expected expression at end of input
  158 |                 if (status ==
      |                 ^~
./samples/SAFE/__tmp_aeb228a3.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aeb228a3.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aeb228a3.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aeb228a3.c:158:17: error: expected declaration or statement at end of input
